동호-1장요약-클로저

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/동호/동호.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/동호/동호.md
@@ -1,12 +1,8 @@
-# 리액트 개발을 위해 꼭 알아야 할 자바스크립트
-
 ---
-
 이 장에서는 리액트 코드를 작성하고 작동 방식을 이해하기 위한 최소한의 자바스크립트에 대해서 다룬다.
-
 ---
 
-@khakhiD 
+@khakhiD
 
 ### 리액트가 프론트엔드 시장을 점령할 수 있었던 이유
 
@@ -72,7 +68,7 @@
 let hello = 'hello world';
 let hi = hello;
 
-console.log(hello === hi)
+console.log(hello === hi);
 // true
 ```
 
@@ -82,7 +78,7 @@ console.log(hello === hi)
 let hello = 'hello world';
 let hi = 'hello world';
 
-console.log(hello === hi)
+console.log(hello === hi);
 // true
 ```
 
@@ -92,16 +88,16 @@ console.log(hello === hi)
 
 ```jsx
 var hello = {
-	greet: 'hello, world',
-}
+  greet: 'hello, world',
+};
 var hi = {
-	greet: 'hello, world',
-}
-	
-console.log(hello === hi) 
+  greet: 'hello, world',
+};
+
+console.log(hello === hi);
 // false
 
-console.log(hello.greet === hi.greet)
+console.log(hello.greet === hi.greet);
 // true
 ```
 
@@ -109,11 +105,11 @@ console.log(hello.greet === hi.greet)
 
 ```jsx
 var hello = {
-	greet: 'hello, world',
-}
-var hi = hello
-	
-console.log(hello === hi) // true
+  greet: 'hello, world',
+};
+var hi = hello;
+
+console.log(hello === hi); // true
 ```
 
 - `hi`는 `hello`와 동일한 주소를 가리키므로 `true`가 나온다
@@ -127,22 +123,18 @@ console.log(hello === hi) // true
 
 동등 비교를 위한 다른 방법으로 자바스크립트에서 제공하는 메서드인 `Object.is`와 `==`, `===`의 차이점을 이해하고 있어야 한다.
 
-`**==**` 
+`**==**`
 
 - 동등 비교 연산자
 - 타입 변환(형 변환, Type conversion)이 일어난 뒤 비교
-    
-    
 
-`**===**` 
+`**===**`
 
 - 엄격한(strict) 동등 비교 연산자
 - 타입 변환(Type conversion)이 일어나지 않으며,
-타입이 일치해야만 동등한 것으로 간주
-    
-    
+  타입이 일치해야만 동등한 것으로 간주
 
-`**Object.is**` 
+`**Object.is**`
 
 - 동등 비교 메서드 (ES6+ 이후)
 - 동등 비교 `==`의 한계를 극복하기 위해 만들어 졌으나, 객체 간 비교에서는 `===`와 동일하게 동작함
@@ -151,55 +143,55 @@ console.log(hello === hi) // true
 ### 동등 비교 예제
 
 ```jsx
-'' == '0'           // false
-0 == ''             // true
-0 == '0'            // true
+'' == '0'; // false
+0 == ''; // true
+0 == '0'; // true
 
-false == 'false'    // false
-false == '0'        // true
+false == 'false'; // false
+false == '0'; // true
 
-false == undefined  // false
-false == null       // false
-null == undefined   // true
+false == undefined; // false
+false == null; // false
+null == undefined; // true
 
-' \t\r\n ' == 0     // true
+' \t\r\n ' == 0; // true
 ```
 
 ```jsx
-var a = {}
-var b = {}
+var a = {};
+var b = {};
 
-a == b // false
-a === b // false
+a == b; // false
+a === b; // false
 
 var c = [];
 var d = [];
 
-c == d // false
-c === d // false
+c == d; // false
+c === d; // false
 ```
 
 ```jsx
--0 === +0 // true
-Object.is(-0, +0) // false
+-0 === +0; // true
+Object.is(-0, +0); // false
 
-Number.NaN === NaN // false
-Object.is(Number.NaN, NaN) // true
+Number.NaN === NaN; // false
+Object.is(Number.NaN, NaN); // true
 
-NaN === 0 / 0 // false
-Object.is(NaN, 0 / 0) // true
+NaN === 0 / 0; // false
+Object.is(NaN, 0 / 0); // true
 ```
 
 ```jsx
-Object.is({}, {}) // false
+Object.is({}, {}); // false
 
 const a = {
-	hello: 'hi',
-}
-const b = a
+  hello: 'hi',
+};
+const b = a;
 
-Object.is(a, b) // true
-a === b // true
+Object.is(a, b); // true
+a === b; // true
 ```
 
 <aside>
@@ -217,16 +209,16 @@ a === b // true
 
 ```tsx
 type Props = {
-	hello: string
-}
+  hello: string;
+};
 
 function HelloComponent(props: Props) {
-	return <h1>{hello}</h1>
+  return <h1>{hello}</h1>;
 }
 //...
 
 function App() {
-	return <HelloComponent hello="hi!" />
+  return <HelloComponent hello="hi!" />;
 }
 ```
 
@@ -257,7 +249,7 @@ function App() {
 ### 함수를 정의하는 4가지 방법
 
 1. `함수 선언문` ― 사용됨
-2. `함수 표현식`  ― 사용됨
+2. `함수 표현식` ― 사용됨
 3. `Function 생성자` ― 거의 사용되지 않음
 4. `화살표 함수` ― 각광받음
 
@@ -265,41 +257,41 @@ function App() {
 
 ```tsx
 function add(a, b) {
-	return a + b
+  return a + b;
 }
 ```
 
 ```tsx
 const sum = function (a, b) {
-	return a + b
-}
+  return a + b;
+};
 ```
 
 함수 선언문은 표현식이 아닌 일반 문(statement)로 분류되는데, 표현식이란 무언가 값을 산출하는 구문을 의미한다. 함수 선언으로는 어떠한 값도 표현되지 않았으므로 표현식이 아닌 문으로 분류한다.
 
-두 정의법의 가장 큰 차이점은 ***호이스팅(hoisting)*** 여부다.
+두 정의법의 가장 큰 차이점은 **_호이스팅(hoisting)_** 여부다.
 
 ```tsx
-hello() // hello
+hello(); // hello
 
 function hello() {
-	console.log('hello')
+  console.log('hello');
 }
 
-hello() // hello
+hello(); // hello
 ```
 
 - 함수 선언문은 호이스팅된다.
 
 ```tsx
-console.log(typeof hello === 'undefined') // true
-hello() // Uncaught TypeError: hello is not a function
+console.log(typeof hello === 'undefined'); // true
+hello(); // Uncaught TypeError: hello is not a function
 
 var hello = function () {
-	console.log('hello')
-}
+  console.log('hello');
+};
 
-hello()
+hello();
 ```
 
 - 함수 표현식에서 함수를 할당한 변수는 호이스팅된다.
@@ -316,7 +308,7 @@ ES6에서 추가된 함수 생성 방식으로 타이핑할 글자 수가 줄어
 자바스크립트의 this는 함수가 어떻게 호출되느냐에 따라 동적으로 결정된다.
 
 - 전역 스코프에서 사용되면 `this`는 전역 객체를 가리킨다.
-브라우저에서는 window 객체이고, 서버(노드)에서는 global 객체다.
+  브라우저에서는 window 객체이고, 서버(노드)에서는 global 객체다.
 - 함수에서 사용될 때에도 `this`는 전역 객체를 가리킨다.
 - 객체에 속한 메서드에서 사용될 때 `this`는 메서드가 속한 객체를 가리킨다.
 - 객체에 속한 메서드의 내부 함수에서 사용될 때 `this`는 전역 객체를 가리킨다.
@@ -340,7 +332,7 @@ ES6에서 추가된 함수 생성 방식으로 타이핑할 글자 수가 줄어
 1. **생성자 함수로 화살표 함수를 사용하는 것은 불가능하다. ⇒ constructor 사용 불가**
 2. **화살표 함수는 arguments를 가질 수 없다.**
 3. **화살표 함수의 this는 함수 자체의 바인딩을 갖지 않는다. ⇒ this를 가지지 않는다!**
-화살표 함수를 선언하면 this에 바인딩할 객체가 일반 함수와는 달리 정적으로 결정된다. 내부에서 this를 참조하면 언제나 상위 스코프의 this를 따르게 된다. 이를 Lexical this라고 한다.
+   화살표 함수를 선언하면 this에 바인딩할 객체가 일반 함수와는 달리 정적으로 결정된다. 내부에서 this를 참조하면 언제나 상위 스코프의 this를 따르게 된다. 이를 Lexical this라고 한다.
 
 ---
 
@@ -362,43 +354,38 @@ ES6에서 추가된 함수 생성 방식으로 타이핑할 글자 수가 줄어
 
 - 한 번 선언하고 호출된 후 더 이상 재호출이 불가하므로, 글로벌 스코프를 오염시키지 않는 독립적인 함수 스코프를 운용할 수 있다는 장점이 있다.
 - 함수가 어디서든 다시 호출되지 않는다는 점을 알 수 있어 리팩터링에 도움이 된다.
-    
-    ```tsx
-    (function (a, b) {
-    	return a + b
-    })(10, 24); // 34
-    
-    ((a, b) => {
-    	return a + b
-    	},
-    )(10, 24) // 34
-    ```
-    
+  ```tsx
+  (function (a, b) {
+  	return a + b
+  })(10, 24); // 34
+
+  ((a, b) => {
+  	return a + b
+  	},
+  )(10, 24) // 34
+  ```
 
 **고차 함수 (Higher Order Function)**
 
 - 자바스크립트의 함수가 일급 객체라는 특징을 활용하여 함수를 인수로 받거나 결과로 새로운 함수를 반환시킬 수 있다. 이 역할을 하는 함수가 고차 함수다.
-    
-    ```tsx
-    // 함수를 매개변수로 받는 대표적인 고차 함수, Array.prototype.map
-    const doubledArray = [1, 2, 3].map((item) =-> item * 2)
-    
-    doubledArray // [2,4,6]
-    ```
-    
-    ```tsx
-    // 함수를 반환하는 고차 함수의 예
-    const add = function (a) {
-    	// a가 존재하는 클로저를 생성
-    	return function (b) {
-    		// b를 인수로 받아 두 합을 반환하는 또 다른 함수를 생성
-    		return a + b
-    	}
-    }
-    
-    add(1)(3) // 4
-    ```
-    
+  ```tsx
+  // 함수를 매개변수로 받는 대표적인 고차 함수, Array.prototype.map
+  const doubledArray = [1, 2, 3].map((item) =-> item * 2)
+
+  doubledArray // [2,4,6]
+  ```
+  ```tsx
+  // 함수를 반환하는 고차 함수의 예
+  const add = function (a) {
+    // a가 존재하는 클로저를 생성
+    return function (b) {
+      // b를 인수로 받아 두 합을 반환하는 또 다른 함수를 생성
+      return a + b;
+    };
+  };
+
+  add(1)(3); // 4
+  ```
 - 이 특징으로 리액트에서 함수형 컴포넌트를 인수로 받아 새로운 함수형 컴포넌트를 반환하는 고차 함수를 만들 수 있다. 이를 고차 컴포넌트라고 부른다.
 - 고차 함수형 컴포넌트를 만들면 컴포넌트 내부에서 공통으로 관리되는 로직을 분리해 관리할 수 있기 때문에 효율적인 리팩터링이 가능하다.
 
@@ -407,17 +394,17 @@ ES6에서 추가된 함수 생성 방식으로 타이핑할 글자 수가 줄어
 좋은 함수는 무엇이고 함수를 만들 때 무엇을 조심해야 하는가?
 
 - **함수의 부수 효과(side-effect)를 최대한 억제하라**
-    - 사이드 이펙트는 함수 내의 작동으로 인해 함수가 아닌 함수 외부에 영향을 끼치는 것을 의미한다.
-    - 부수 효과가 없는 함수를 순수 함수라고 한다. 이는 언제 실행되어도 항상 결과가 동일하다.
-    - 웹 앱에서 부수 효과는 피할 수 없는 요소다.
-        - 컴포넌트 내부에서 API를 호출한다면 외부 영향(HTTP request)을 끼쳤으므로 부수 효과다. console.log 또한 외부에 영향을 미친다. 하지만 최대한 억제할 수 있는 방향으로 함수를 설계해야 한다.
-    - 리액트의 관점에서 useEffect의 작동을 최소화하는 것이 그 일환이다.
+  - 사이드 이펙트는 함수 내의 작동으로 인해 함수가 아닌 함수 외부에 영향을 끼치는 것을 의미한다.
+  - 부수 효과가 없는 함수를 순수 함수라고 한다. 이는 언제 실행되어도 항상 결과가 동일하다.
+  - 웹 앱에서 부수 효과는 피할 수 없는 요소다.
+    - 컴포넌트 내부에서 API를 호출한다면 외부 영향(HTTP request)을 끼쳤으므로 부수 효과다. console.log 또한 외부에 영향을 미친다. 하지만 최대한 억제할 수 있는 방향으로 함수를 설계해야 한다.
+  - 리액트의 관점에서 useEffect의 작동을 최소화하는 것이 그 일환이다.
 - **가능한 한 함수를 작게 만들어라**
-    - 하나의 함수가 하는 일이 많아질 경우 문제를 일으킬 수 있는 여지가 커진다.
-    - 하나의 함수는 하나의 일을 잘 하면 함수의 재사용성을 높일 수 있다.
+  - 하나의 함수가 하는 일이 많아질 경우 문제를 일으킬 수 있는 여지가 커진다.
+  - 하나의 함수는 하나의 일을 잘 하면 함수의 재사용성을 높일 수 있다.
 - **누구나 이해할 수 있는 이름을 붙여라**
-    - Terser를 사용하면 한글로 함수 네이밍이 가능하다. (개발 단의 코드 크기나 번들링 속도에서 부담이 될 가능성은 있다.)
-    - 리액트의 useEffect, useCallback 등의 훅에 넘겨주는 콜백 함수에도 네이밍을 붙여주면 도움이 된다.
+  - Terser를 사용하면 한글로 함수 네이밍이 가능하다. (개발 단의 코드 크기나 번들링 속도에서 부담이 될 가능성은 있다.)
+  - 리액트의 useEffect, useCallback 등의 훅에 넘겨주는 콜백 함수에도 네이밍을 붙여주면 도움이 된다.
 
 # 클래스 (Class)
 
@@ -429,6 +416,173 @@ ES6에서 추가된 함수 생성 방식으로 타이핑할 글자 수가 줄어
 - 리액트가 함수형으로 패러다임을 바꾼 지 이해할 수 있다.
 - 자바스크립트의 프로토타입 기반으로 작동하는 클래스를 이해하면 자연스럽게 프로토타입에 대해서도 이해할 수 있다.
 
+### 클래스와 함수의 관계
+
+- 자바스크립트 클래스는 프로토타입을 활용하여 구현됨
+- 클래스는 객체지향 언어를 사용하던 개발자가 사용하기 편하도록 만들어주는 Syntactic Sugar
+
 # 클로저 (Closure)
+
+---
+
+- 리액트 클래스형 컴포넌트의 이해 ← **_클래스, 프로토타입, this_**
+- 리액트 함수형 컴포넌트의 이해 ← **_클로저_**
+
+<aside>
+👀 ***클로저의 정의 “함수와 함수가 선언된 어휘적 환경(Lexical Scope)의 조합”***
+
+</aside>
+
+### 어휘적 환경
+
+```jsx
+function add() {
+  const a = 10;
+  function innerAdd() {
+    const b = 20;
+    console.log(a + b);
+  }
+  innerAdd(); // 30
+}
+
+add();
+```
+
+- add 함수 내부에 innerAdd
+  - innerAdd 함수는 내부에서 b 변수를 선언하고 외부 a와 더함
+  - `a`의 유효범위는 `add`의 전체, `b`의 유효 범위는 `innerAdd`의 전체
+
+선언된 어휘적 환경: 변수가 코드 내부에 어디서 선언되었는지 의미
+
+<aside>
+👀 ***자바스크립트는 함수 레벨 스코프를 따른다. `{}` 블록이 스코프 범위를 결정하지 않는다.***
+
+</aside>
+
+```jsx
+function outerFunc() {
+  var x = 'hello';
+  function innerFunc() {
+    console.log(x);
+  }
+
+  return innerFunc;
+}
+
+const innerFunc = outerFunc();
+innerFunc(); // 'hello'
+```
+
+- 변수 `innerFunc`에는 함수 `innerFunc`가 반환되는데 `x` 변수의 값을 기억하고 있음
+- 해당 함수가 선언된 어휘적 환경을 기억
+
+### 클로저 활용
+
+전역 스코프에 선언된 값은 누구든 접근할 수 있고 수정할 수 있다.
+
+```jsx
+var counter = 0;
+
+function handleClick() {
+  counter++;
+}
+```
+
+**문제점**
+
+- 전역에 `counter`가 선언되어 있어서 누구나 수정이 가능함
+
+클로저를 활용한 코드로 수정해보자.
+
+```jsx
+function Counter() {
+  var counter = 0;
+
+  return {
+    increase: function () {
+      return ++counter;
+    },
+    decrease: function () {
+      return --counter;
+    },
+    counter: function () {
+      console.log('counter에 접근');
+      return counter;
+    },
+  };
+}
+
+var c = Counter();
+
+console.log(c.increase()); //1
+console.log(c.increase()); //2
+```
+
+**장점**
+
+- `counter` 변수에 접근할 수 없음
+- `counter` 변수의 업데이트(수정)을 `increase`와 `decrease`로 제한함
+
+### 리액트에서의 클로저
+
+```jsx
+function Component() {
+  const [state, setState] = useState();
+
+  function handleClick() {
+    // useState 호출은 위에서 끝났지만,
+    // setState는 계속 내부의 최신값(prev)을 알고 있다.
+    // 이는 클로저를 활용했기 때문
+    setState((prev) => prev + 1);
+  }
+  // ...
+}
+```
+
+- `useState` 함수 호출은 Component 내부 첫 줄에서 종료되었는데, setState는 useState 내부의 최신 값을 계속 확인할 수 있다.
+- 클로저가 useState 내부에서 활용되었기 때문
+- 외부 함수 useState가 반환한 내부 함수 setState는 외부 함수의 호출이 끝났음에도 자신이 선언된 외부 함수가 선언된 환경 (state가 저장되어 있는 어딘가)을 기억하기 때문에 계속해서 state 값을 사용할 수 있다.
+
+### 주의할 점
+
+```jsx
+for (var i = 0; i < 5; i+=) {
+	setTimeout(function () {
+		console.log(i)
+	}, i * 1000)
+}
+```
+
+- 0부터 시작해 1초 간격으로 그 다음 정수를 출력하는 것이 의도이다.
+- 실제로 실행하면 0, 1, 2, 3, 4초 뒤에 5만 출력된다.
+- setTimeout의 익명 함수가 클로저로 i를 잘 따라갈 것 같은데 모두 5가 되는 이유는?
+  - `i`가 전역 변수로 동작하고 있기 때문이다.
+
+1. 함수 레벨 스코프가 아닌 블록 레벨 스코프를 갖는 `let`으로 `i` 변수를 선언
+2. 클로저를 제대로 활용하기
+
+   ```jsx
+   for (var i = 0; i < 5; i+=) {
+   	setTimeout(
+   		(function (sec) {
+   			return function () {
+   				console.log(sec)
+   			}
+   		})(i),
+   		i * 1000,
+   	)
+   }
+   ```
+
+   - for문 내부에 즉시 실행 익명 함수를 선언
+   - 즉시 실행 익명 함수는 for문마다 생성되고 실행되기를 반복
+   - 각각의 함수는 고유의 스코프와 sec을 가지게 되므로 올바르게 동작
+
+<aside>
+👀 ***클로저를 사용하는 데는 비용이 발생한다. 성능에 영향을 미치는 작업이므로 꼭 필요한 곳에만 사용해야 하고 사용에 주의를 기울여야 한다.***
+
+</aside>
+
+# 이벤트 루프와 비동기 통신의 이해
 
 ---
