예시 코드 수정

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
@@ -49,8 +49,13 @@
            - ex) 클래스의 메소드에서 콜백함수를 화살표함수로 작성하면 화살표함수로 호출되어 this는 상위 스코프인 인스턴스를 가리키게 된다 (lexical this) -> 개발자 의도대로 작동 가능!
              ```js
              class Prefixer {
+               constructor(prefix) {
+                 this.prefix = prefix;
+               }
                add(arr) {
                  return arr.map((item) => this.prefix + item);
+                 /* this가 인스턴스를 정상적으로 가리킨다 
+                  (화살표함수 내의 this는 상위 스코프의 this를 참조하기 때문!) */
                }
              }
              ```
