클래스, 클로저

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
@@ -76,3 +76,64 @@
       - 함수의 원래 목적은 재사용성을 높이는 것.
       - 함수는 하나의 일만 잘하면 그 목적을 달성하는 것이다.
     - "누구나 이해할 수 있는 이름을 붙여라"
+- 클래스  
+  특정한 형태의 객체를 반복적으로 만들기 위해 사용되는 것 (템플릿)
+
+  - 구성
+
+    - constructor
+    - getter, setter
+    - 프로퍼티
+    - 메서드
+
+      - 인스턴스 메서드
+        - 클래스 내부에서 선언한 메서드. 프로토타입 메서드.
+        - 메서드는 메모리 절약을 위해 인스턴스의 부모인 **프로토타입에 선언**된다.
+          따라서 인스턴스들은 프로토타입으로부터 메서드를 상속받아 사용한다. (프로토타입 체이닝)
+      - 정적 메서드 (static)
+
+        - 클래스의 인스턴스가 아닌 이름으로 호출할 수 있는 메서드
+
+          ```js
+          class Car {
+            static hello() {
+              console.log("안녕");
+            }
+          }
+
+          const myCar = new Car();
+          myCar.hello(); // TypeError
+          Car.hello(); // 안녕!
+          ```
+
+        - 정적메서드 내부의 this는 인스턴스가 아닌 클래스 자신을 가리킴 -> 일반적으로 사용하는 this로 사용할 수 없다
+
+  - 상속
+    - `~ extends React.Component`
+    - `~ extends React.PureComponent`
+  - 클래스와 함수의 관계
+    - ES6때 생긴 개념
+    - 이전에는 프로토타입을 활용해 클래스를 동일하게 구현
+    - 프로토타입을 기반으로 작동
+    - ES6미만 환경에서는 클래스를 구현하기 위해 헬퍼 함수를 만들어 동일하게 동작
+    - 클래스 작동을 **'생성자 함수'로 유사하게 재현 가능**
+    - 즉, 클래스는 **객체지향언어를 위한 문법적 설탕**.
+
+- 클로저
+  - "함수와 함수가 선언된 렉시컬(어휘적) 환경의 조합"
+    - 선언된 렉시컬 환경: 변수/함수가 코드 내부에서 **어디서 선언됐는지**를 말함. 코드가 **작성된 순간에 '정적'으로 결정**된다.
+    - 스코프
+      - 자바스크립트는 기본적으로 함수 레벨 스코프
+      - {} 블록이 아닌 함수 블록으로 스코프가 결정된다
+      - cf) let, const는 블록 레벨 스코프
+    - 함수는 자신이 존재하던 환경(= **선언된 렉시컬 환경** = **선언하며 정적으로 결정된 스코프**)을 기억한다.
+      - 따라서 자기 자신(내부함수)이 선언된 렉시컬 환경(외부함수)이 종료됐음에도 그 환경을 기억해 같은 환경 안에 있던 변수를 참조할 수 있는 것임.
+  - 클로저의 활용 방향
+    - 전역 스코프의 사용을 막고, 개발자가 원하는 정보만 개발자가 원하는 방향대로 조작하고 노출시킬 수 있다. (counter 클로저를 생각해보기!)
+  - 리액트에서의 클로저
+    - useState
+      - useState함수 호출이 종료됐음에도 setState는 useState 내부의 최신 값을 계속 확인할 수 있음: 바로 클로저 때문! 즉, setState 자신이 선언된 렉시컬 환경을 기억하고, 그 렉시컬 환경 내에 있던 state를 계속해서 참조할 수 있는 것임.
+  - 주의할 점
+    - setTimeout의 예시
+    - 클로저는 함수형 프로그래밍의 목적 (부수효과가 없고 순수해야 한다)을 달성하기 위해 적극적으로 사용된다.
+    - 반면 클로저는 불필요하게 메모리를 잡아먹거나 적절한 스코프로 가둬두지 않으면 성능에 악영향을 미칠 수도 있다.
