--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
@@ -137,3 +137,26 @@
     - setTimeout의 예시
     - 클로저는 함수형 프로그래밍의 목적 (부수효과가 없고 순수해야 한다)을 달성하기 위해 적극적으로 사용된다.
     - 반면 클로저는 불필요하게 메모리를 잡아먹거나 적절한 스코프로 가둬두지 않으면 성능에 악영향을 미칠 수도 있다.
+- 이벤트 루프와 비동기 통신의 이해
+  - 자바스크립트는 싱글 스레드 언어
+    - 한 번에 하나씩 순차적으로 처리
+    - 동시에 여러 작업을 처리하지 못한다
+    - ↔️ 비동기 함수 (asynchronous)
+      - 응답이 언제 올지 알 수 없으나,
+      - 여러 작업을 동시에 수행할 수 있음
+  - 이벤트루프
+    - 동기식으로 작동하는 자바스크립트가 비동기 코드를 처리하기 위한 자바스크립트 '외부' 장치
+    - 콜 스택 (call stack, 호출 스택)
+      - 자바스크립트에서 수행해야할 코드를 순차적으로 담아둔 **스택**
+      - 이벤트 루프의 '단일' 스레드 내부에서
+        1. **콜 스택이 비어있는지** 여부를 확인하고, 비어있다면 **태스크 큐를 확인**해 태스크를 콜 스택으로 들여보낸다.
+        2. 스택에 수행해야 할 코드가 있다면 자바스크립트 엔진을 이용해 **실행**한다.
+        - '단일'스레드에서 일어나므로 두 작업은 순차적으로 일어난다.
+      - 비동기 함수 자체는 브라우저나 Node.js가 별도의 스레드에서 태스크 큐에 작업을 할당하며 처리한다.
+        - ex) setTimeout 함수는 외부 Web API로서 브라우저가 처리한다. 즉 브라우저가 타이머를 실행시키고, 타이머가 완료되면 내부 콜백 함수(이 놈이 자바스크립트 코드) 를 태스크 큐에 넣는다.
+          태스크 큐에 있는 코드는 콜 스택이 비어있을 때 여기에 올라가(이벤트 루프에 의해) 자바스크립트 엔진에 의해 실행된다.
+      - 자바스크립트만으로는 비동기 함수를 실행 못함(싱글 스레드라)! 자바스크립트 엔진이 다른 코드를 동기적으로 실행하고 있을 때 외부 엔진이 비동기 함수를 실행, 태스크 큐에 자바스크립트 코드를 넣으면 그게 스택에 올라와서 그때서야 자바스크립트가 이를 실행하는 것임.
+    - 태스크 큐와 마이크로 태스크 큐
+      - 순서: 마이크로 태스크 큐 -> 태스크 큐 (마이크로가 비어야 태스크 큐 실행)
+      - 렌더링
+        - 마이크로 태스크 큐 각 작업 후 렌더링의 기회, 마이크로 태스크 큐 비워지면 태스크 큐 각 작업 후 렌더링의 기회
