자주쓰이는 자스 문법, 타스

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/민희/민희.md
@@ -160,3 +160,39 @@
       - 순서: 마이크로 태스크 큐 -> 태스크 큐 (마이크로가 비어야 태스크 큐 실행)
       - 렌더링
         - 마이크로 태스크 큐 각 작업 후 렌더링의 기회, 마이크로 태스크 큐 비워지면 태스크 큐 각 작업 후 렌더링의 기회
+- 리액트에서 자주 사용하는 자바스크립트 문법
+  - 바벨
+    - 최신 자바스크립트 문법을 옛날 걸로 트랜스파일 시켜준다 (다양한 브라우저에서 일관적으로 지원 가능하도록)
+    - 구형 기기, IE11 등 ES5만 지원하는 케이스들을 위해 꼭 필요하다
+  - 구조 분해 할당
+    - 객체 구조분해할당은 트랜스파일 후 번들링 크기가 크다 (반면 배열은 간단) → 꼭 필요할 때만 사용하자, ...rest는 lodash에서 제공하기도 한다
+  - 전개(Spread) 구문
+    - 마찬가지로 객체 전개 연산자는 트랜스파일 후 번들링 크기가 크다
+  - 객체 초기자
+  - Array 프로토타입의 메소드: map, filter, reduce, forEach
+    - map, filter, reduce 모두 새로운 배열을 반환한다
+    - forEach는 아무것도 반환하지 않고, 중간에 중단할 수 없다. (항상 O(n))
+  - 삼항 조건 연산자
+  - [ECMAScript 신규 문법 제안 저장소](https://github.com/tc39/proposals)
+- 타입스크립트
+  - 동적 언어인 자스의 한계를 극복하기 위해, 자스에 타입 시스템을 추가한 언어
+  - 타입 체크를 런타임이 아닌 빌드(트랜스파일)타임에 수행한다 → 빌드 시점에 에러를 미리 잡아낼 수 있다
+  - 결국엔 자스로 변환돼서 자스 런타임 환경(브라우저, Node.js)에서 실행된다
+  - 활용법
+    - any 대신, unknown (어떤 타입이든 될 수 있는 타입) + 타입 좁히기
+    - never(어떤 타입도 될 수 없음. 존재 불가능한 타입)
+      - 리액트 컴포넌트에서 어떠한 props도 받을 수 없도록 할 때
+    - 타입 가드 적극 활용하기
+      - instanceof, typeof
+      - in
+        - 타입에 여러 객체가 존재하는 경우
+    - 제네릭
+      - 타입만 다르고 비슷한 작업을 하는 컴포넌트의 경우 유용
+    - 인덱스 시그니처
+      - `{[key: string]: string}` 객체의 키 타입 정의
+      - 키가 동적으로 선언되는 것을 지양하기 위한 대안
+        - `Record<'hello'|'hi'>`
+        - `{[key in 'hello'|'hi']: string}`
+  - 구조적 타이핑, 덕 타이핑
+    - "타입스크립트는 값의 타입을 체크할 때 그 값이 가진 형태에 집중한다."
+    - 자스는 객체의 타입에 구애받지 않고 객체의 타입에 열려있어, 타스도 이러한 특성에 맞추어 객체의 키에 포괄적으로 대응하기 위해 `Object.keys(객체)`의 타입을 `string[]`으로 제공한다.
