--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.1 자바스크립트의 동등 비교.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.1 자바스크립트의 동등 비교.md
@@ -2,6 +2,9 @@
 
 JS의 모든 값은 데이터 타입을 갖고 있으며, 이 데이터 타입은 크게 **원시 타입**과 **객체 타입**으로 나눌 수 있다.
 
+> 값의 저장 방식이 다르다.
+> 원시 타입은 불변 형태로 변수 할당 시점에 메모리에 저장되고, 객체(참조) 타입은 가변 형태로 저장되며 복사해도 실제 값이 아닌 객체의 참조 값을 전달한다.
+
 - 원시 타입 (primitive type)
 
   - boolean
@@ -287,3 +290,64 @@ hello1 === hello2 // false
 
 > ⭐️ 정리 ⭐️
 > 리액트는 자바스크립트를 기반으로 한 리액트의 함수형 프로그래밍 모델이다. 언어적인 한계로 얕은 비교만을 사용해 비교를 수행해 필요한 기능을 구현하고 있다.
+
+<br/>
+
+#### [코드 1.3] `React.memo`의 깊은 비교 문제 예시
+
+- #### `React.memo(component)`
+  - 컴포넌트 자체를 메모이제이션한다.
+  - 랜더링이 되어야 하는 상황에 놓일 때 마다 **prop check**를 통해서 자신이 받는 prop에 변화가 있는지 확인해서 변화가 있을때만 랜더링을 하고 없다면 새로 랜더링을 하는게 아니라 `기존에 랜더링이 된 내용(메모이징한 내용)을 재사용`한다.
+- `DeeperComponentProps`와 같이 props가 깊어지는 경우, 즉 한 객체 안에 또다른 객체가 있을 경우 `React.memo`는 컴포넌트에 실제로 변경된 값이 없음에도 불구하고 메모이제이션된 컴포넌트를 반환하지 못한다. 즉, `Component`는 `props.counter`가 존재하지만, `DeeperComponentProps`는 `props.counter.counter`에 props가 존재한다. 상위 컴포넌트인 App에서 버튼을 클릭해서 강제로 렌더링을 일으킬 경우, `shallowEqual`을 사용하는 Component 함수는 위 로직에 따라 정확히 객체 간 비교를 수행해서 렌더링을 방지해 주었지만 `DeeperComponent` 함수는 제대로 비교 하지 못해 `memo`가 작동하지 않았다.
+
+```
+import { memo, useEffect, useState } from 'react'
+
+type ComponentProps = {
+  counter: number,
+};
+
+type DeeperComponentProps = {
+  counter: {
+    counter: number,
+  },
+};
+
+const Component = memo((props: ComponentProps) => { // 메모이제이션
+  useEffect(() => {
+    console.log("Component render");
+  });
+
+  return <h1>{props.counter}</h1>;
+});
+
+const DeeperComponent = memo((props: DeeperComponentProps) => { // 메모이제이션
+  useEffect(() => {
+    console.log("DeeperComponent render");
+  });
+
+  return <h1>{props.counter.counter}</h1>;
+});
+
+function App() {
+  const [, setCounter] = useState(0);
+
+  function handleClick() {
+    setCounter((prev) => prev + 1)
+  }
+
+  return (
+    <>
+      <Component counter={100}></Component>
+      <DeeperComponent counter={{ counter: 100 }}></DeeperComponent>
+      <button
+        onClick={handleClick}
+      >
+        +
+      </button>
+    </>
+  );
+}
+
+export default App;
+```
