docs: 스코프 내용 추가

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.4 클로저.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.4 클로저.md
@@ -97,6 +97,20 @@
   }
   ```
 
+https://poiemaweb.com/js-closure
+
 ### 🔗 1.4.4 주의할 점
 
-✅ 다시 읽어보자!
+#### ⭐️ 스코프
+
+#### 함수 레벨 스코프 (Function-level scope)
+
+- 함수 내에서 선언된 변수는 함수 내에서만 유효하며 함수 외부에서는 참조할 수 없다.
+- 즉, 함수 내부에서 선언한 변수는 지역 변수이며 함수 외부에서(함수 내부가 아닌 곳에서) 선언한 변수는 모두 전역 변수이다.
+- `var`
+
+#### 블록 레벨 스코프 (Block-level scope)
+
+- 모든 코드 블록(함수, if 문, for 문, while 문, try/catch 문 등) 내에서 선언된 변수는 코드 블록 내에서만 유효하며 코드 블록 외부에서는 참조할 수 없다.
+- 즉, 코드 블록 내부에서 선언한 변수는 지역 변수이다.
+- `let`
