docs: 예시 코드 추가

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.5 이벤트 루프와 비동기 통신의 이해.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.5 이벤트 루프와 비동기 통신의 이해.md
@@ -61,6 +61,25 @@ foo()
 - 콜 스택 시각화
   <img src="./img/KakaoTalk_Photo_2024-04-18-21-29-10.jpeg" width="500"/>
 - 비동기 작업 콜 스택 & 태스크 큐 시각화
+
+```
+function bar() {
+  console.log('bar')
+}
+
+function baz() {
+  console.log('baz')
+}
+
+function foo() {
+  console.log('foo')
+  setTimeout(bar(), 0)
+  baz()
+}
+
+foo()
+```
+
   <img src="./img/KakaoTalk_Photo_2024-04-18-22-26-27.jpeg"/>
 
 ### 이벤트 루프 (Event loop)
@@ -74,6 +93,7 @@ foo()
 
 - **코드를 실행하는 것**과 **호출 스택이 비어있는지 확인하는 것** 모두가 단일 스레드에서 일어난다.
   - 즉, 두 작업은 동시에 일어날 수 없으며 한 스레드에서 순차적으로 일어난다.
+  - **코드를 실행시키는 것**은 자바스크립트 엔진이 수행한다.
 
 ### 태스크 큐
 
@@ -96,3 +116,37 @@ foo()
   - 마이크로 태스크 큐 작업1 => 렌더링 => 마이크로 태스크 큐 작업2 => 렌더링 => 마이크로 태스크 큐 작업3 => 렌더링
 
 #### [코드 1.12] 동기 코드, 태스크 큐, 마이크로 태스크 큐와 렌더링과의 관계를 확인할 수 있는 코드
+
+#### 아래 함수의 실행 결과를 예측해 보기
+
+1. 콜 스택 안에 작업이 먼저 이루어진다.
+2. 마이크로 테스크 큐의 작업이 끝날 때 까지 진행된다.
+3. 테스크 큐의 작업이 끝날 때 까지 진행된다.
+
+```
+function timer(i) {
+  let start = i;
+
+  // callback 함수
+  const callback = (i) => { // 1
+    setTimeout(() => { // 2
+      Promise.resolve().then(() => { // 3
+        console.log(`--${i}--`);
+      });
+
+      setTimeout(() => { // 4
+        console.log(`-${i}-`);
+      });
+
+      console.log(`---${i}---`); // 5
+    }, (start - i) * 1000);
+  };
+
+  // 반복문
+  for (let j = 0; j <= i; j += 1) {
+    callback(j);
+  }
+}
+
+timer(5);
+```
