docs: 렌더링은 어떻게 일어나는 지에 대한 정리

--- a/[02장] 리액트 핵심 요소 깊게 살펴보기/진경/2.4 렌더링은 어떻게 일어나는가?.md
+++ b/[02장] 리액트 핵심 요소 깊게 살펴보기/진경/2.4 렌더링은 어떻게 일어나는가?.md
@@ -118,14 +118,54 @@
 
 ```
 // 리액트 컴포넌트 트리의 렌더링 과정을 살펴보기 위한 예제
-import {useStae} from 'react'
+import { useState } from 'react'
 
 export default function A() {
-...
+  return (
+    <div className="App">
+      <h1>Hello React!</h1>
+      <B />
+    </div>
+  )
 }
 
 function B() {
-...
+  const [counter, setCounter] = useState(0)
+
+  function handleButtonClick() {
+    setCounter((prev) => prev + 1)
+  }
+
+  return (
+    <>
+      <label>
+        <C number={counter} />
+      </label>
+      <button onClick={handleButtonClick}>+</button>
+    </>
+  )
+}
+
+function C({ number }) {
+  return (
+    <div>
+      {number} <D />
+    </div>
+  )
+}
+
+function D() {
+  return <>리액트 재밌다!</>
 }
 
 ```
+
+1. B 컴포넌트의 `setState` 호출된다.
+2. B 컴포넌트의 리렌더링 작업이 렌더링 큐에 들어간다.
+3. 리액트는 트리 최상단에서부터 렌더링 검사한다.
+4. A 컴포넌트는 리렌더링이 필요한 컴포넌트로 표시돼 있지 않으므로 별다른 작업을 하지 않는다.
+5. 그다음 하위 컴포넌트인 B 컴포넌트는 업데이트가 필요하다고 체크돼 있으므로 B를 렌더링한다.
+6. 5번 과정에서 B는 C를 반환했다.
+7. C는 props인 number가 업데이트됐다. 그러므로 업데이트가 필요한 컴포넌트로 체크돼 있고 업데이트한다.
+8. 7번 과정에서 C는 D를 반환했다.
+9. D도 마찬가지로 업데이트가 필요한 컴포넌트로 체크되지 않았다. 그러나 C가 렌더링 됐으므로 그 자식인 D도 렌더링됐다.
