렌더링 부연설명 추가, 예제 추가

--- a/[02장] 리액트 핵심 요소 깊게 살펴보기/민희/민희.md
+++ b/[02장] 리액트 핵심 요소 깊게 살펴보기/민희/민희.md
@@ -71,14 +71,18 @@
       - 파이버는 **비동기**로 작동하여 이러한 문제들을 효율적으로 해결! ⭐️
     - 파이버는 리액트 컴포넌트에 대한 정보를 1:1로 가지는 단순한 자바스크립트 객체이다.
       - 가상DOM은 이렇게 단순한 객체로 관리된다.
-      - 즉, UI를 '**값**'으로 관리한다. ⭐️
+      - 즉, 리액트는 UI를 '**값**'으로 관리한다. ⭐️
     - 파이버는 가급적이면 재사용된다
     - 리액트의 렌더링
+      - 리액트 렌더링이란, 컴포넌트 중에서 어떤 것을 화면에 그려낼지 결정하는 과정
+      - 부수효과가 있어서는 안 된다. 즉, 렌더링 이전에 있던 객체나 변수를 변경해서는 안 된다.
       - 하나의 작업 단위로 구성된 파이버를 우선순위대로 하나씩 처리하고, 작업을 마무리하고 커밋해 마지막에 실제 DOM에 가시적인 변경사항을 만들어낸다.
       1.  렌더 단계 render
           - 비동기 (즉 동시성 렌더링, 리액트 18부터)
             - 작업의 우선순위 지정 혹은 중지 혹은 재시작 혹은 폐기
+              - ex. `useTransition` 훅
             - 브라우저의 동기 작업을 차단하지 않고 백그라운드에서 새로운 리액트 트리 준비할 수 있어 매끄러운 사용자 경험 제공 ⭐️
+            - 즉, 사용자 이벤트로 리렌더링이 되고는 있지만 아직 커밋까지 가지 않은 상태에서 만약 다른 리렌더링이 발생한다면 기존 렌더링은 뒤로 밀려나거나 폐기될 수도 있다는 것 !! 그리고 이렇게 전부 수집한 변경사항들을 **한 번에** 실제 DOM에 반영함. (Batch Update)
           - 컴포넌트 실행(render() or return)해 그 결과와 이전 가상 DOM을 비교해 변경이 필요한 컴포넌트를 체크 (변경사항 감지)
           - 변경사항이 감지되지 않는다면 커밋단계로 넘어가지 않을 수 있음. 즉 브라우저 렌더링 발생 안할 수도 있음.
           - 즉 리액트의 렌더링이 일어난다고 해서 무조건 DOM 업데이트가 일어나는 것은 아니다. ⭐️
@@ -86,7 +90,6 @@
           - 동기
           - 실제 DOM에 반영하기 위한 작업 `commitWork()`
           - 이 작업까지 끝나야 브라우저의 렌더링이 발생
-      - 그러니까 실제 DOM을 업데이트하는 과정은 동기식으로 진행돼서 비효율적이기 때문에, 비동기식 렌더 단계를 먼저 거쳐 우선순위를 정하고 버릴 건 버린 후에 진짜 반영해야 하는 최종 변경사항들을 커밋단계에서 실행하는건가 ❓
     - 파이버 노드의 생성 흐름
       1.  더 이상 자식이 없는 파이버를 만날 때까지 트리 형식으로 `beginWork()` 함수 실행
       2.  자식이 없는 파이버는 `completeWork()` 수행하고 형제로 넘어가서 똑같이 진행.
@@ -157,14 +160,17 @@
     - 코드 크기를 최적화하기 어렵다.
       - 번들 사이즈를 줄이지 못한다. 사용하지 않는 메서드인데도 번들에 그대로 포함된다.
 - 함수 컴포넌트
+
   - 리액트 16 이전에는 단순히 무상태 컴포넌트를 위한 수단이었으나, '훅'이 등장하면서 활발히 사용
   - 클래스 컴포넌트와의 차이점
+
     - 생명주기 메서드가 없다.
       - 클래스 컴포넌트는 생명주기 메서드를 React.Component로부터 상속받는다.
       - 다만 `useEffect`훅을 통해 `componentDidMount`, `componentDidUpdate`, `componentWillUnMount`를 *비슷*하게 구현 (단, 생명주기를 위한 훅은 아니고, state를 활용해 동기적으로 부수효과를 만듦)
     - props를 외부에서 인수로 받기 때문에 값을 변경할 수 없고 그대로 사용하게 된다. (장점)
+
       - 반면 클래스 컴포넌트는 props가 this에 바인딩 돼있는데, 이 this는 컴포넌트 인스턴스의 멤버(변경 가능한 값)를 가리키기 때문에 변경된 값을 읽을 수 있다.
-      - 함수 컴포넌트는 렌더링이 일어날때마다 그 순간의 props와 state를 기준으로 렌더링하지만,
+      - 함수 컴포넌트는 렌더링이 일어날때마다 [그 순간의 props와 state를 기준으로 렌더링](https://react.dev/learn/state-as-a-snapshot#rendering-takes-a-snapshot-in-time)하지만,
         클래스 컴포넌트는 시간의 흐름에 따라 변화하는 this를 기준으로 렌더링이 일어난다.
       - 예시 코드
 
@@ -193,6 +199,33 @@
         ```
 
         - 함수형 컴포넌트는 3초가 지나도 클릭했던 시점의 props.user 값을 렌더링하지만, 클래스 컴포넌트는 3초가 지난 후 변경된 this.props.user 값을 렌더링한다. (this는 변경 가능한 값인데, props는 이 this에 바인딩 돼있기 때문)
+
+      - 예시 코드 2
+
+        ```jsx
+        export default function Counter() {
+          const [number, setNumber] = useState(0);
+
+          return (
+            <>
+              <h1>{number}</h1>
+              <button
+                onClick={() => {
+                  setNumber(number + 5);
+                  setTimeout(() => {
+                    alert(number);
+                  }, 3000);
+                }}
+              >
+                +5
+              </button>
+            </>
+          );
+        }
+        ```
+
+        클릭 시 어떻게 될까? h1의 number는 5로 출력되고, alert에는 0이 출력된다. 3초 뒤에 실행하는 거더라도 리액트는 리렌더링이 호출된 그 시점에 스냅샷을 찍어두기 때문에 호출된 시점의 number 값인 0을 기준으로 렌더링하는 것이다.
+
 - 리액트의 렌더링
   - 리액트 렌더링이 일어나는 조건 (언제?)
     1. state가 변화하는 경우
@@ -218,3 +251,36 @@
       - `useMemo`, `useCallback`는 메모하지 않으면 매번 새로운 객체를 생성하고 **참조가 달라질 것**이다. useEffect같은 의존성 배열에 이 값이 쓰인다면 여기까지 영향을 미치게 된다.
         - 즉 리렌더링뿐만 아니라 이를 사용하는 쪽에서도 고정된 값을 사용할 수 있다는 믿음을 준다.
   - 결론: 메모이제이션했을 때 더 많은 이점! 섣부른 초기화라 할지라도 이를 빠트렸을 때 치러야 할 위험이 더 크다. 가장 좋은 건 어느 지점에서 성능 상 이점을 누릴 수 있는지 살펴보며 필요한 곳에만 적용시키는 것이지만, 확신이 없다면 가능한 한 모든 곳에 메모이제이션을 활용해 최적화하자.
+
+예제
+
+```jsx
+import { useState } from "react";
+
+export default function Counter() {
+  const [number, setNumber] = useState(0);
+
+  return (
+    <>
+      <h1>{number}</h1>
+      <button
+        onClick={() => {
+          setNumber(number + 1);
+          setNumber(number + 1);
+          setNumber(number + 1);
+        }}
+      >
+        +3
+      </button>
+    </>
+  );
+}
+```
+
+위 코드를 실행시켰을 때, 버튼을 한 번 클릭하면 number는 3이 아닌 1로 출력된다.
+이유 두 가지:
+
+- 리액트의 함수 컴포넌트는 호출된 시점의 state를 기준으로 렌더링한다.
+- 리액트는 이벤트 핸들러의 모든 코드가 실행시킨 다음에 상태를 업데이트한다. 따라서 모든 setNumber가 실행된 후에야 리렌더링이 발생한다.
+  - → 덕분에 너무 많은 리렌더링이 발생하지 않는다.
+  - → 모든 코드를 실행시킨 후에 변경사항들을 **집단화해서(batch) 한 번에** DOM을 업데이트한다.
