docs: useState 정리

--- a/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.4 클로저.md
+++ b/[01장] 리액트 개발을 위해 꼭 알아야 할 자바스크립트/진경/1.4 클로저.md
@@ -1,5 +1,7 @@
 > 함수 컴포넌트의 구조와 작동 방식, 훅의 원리, 의존성 배열 등 함수 컴포넌트의 대부분의 기술이 모두 클로저에 의존하고 있기 때문에 함수 컴포넌트 작성을 위해서는 클로저에 대해 이해하는 것이 필수다.
 
+[참고하면 좋을 클로저 & 캡슐화 블로그](https://m.blog.naver.com/dlaxodud2388/222150877668)
+
 ### 🔗 1.4.1 클로저의 정의
 
 > 클로저 = 함수와 함수가 선언된 어휘적 환경의 조합
@@ -35,8 +37,8 @@
   - 브라우저 환경에서 전역 객체는 `window`, Node.js 환경에서는 `global`이 있는데, 바로 이 객체에 전역 레벨에서 선언한 스코프가 바인딩된다.
 - 함수 스코프
 
-  - JS는 기본적으로 함수 레벨 스코프르 따른다.
-  - 즉, {} 블록이 스코프 범위를 결정하지 않는다.
+  - **JS는 기본적으로 함수 레벨 스코프를 따른다.**
+  - 즉, `{}` 블록이 스코프 범위를 결정하지 않는다.
 
     ```
     // if
@@ -55,7 +57,7 @@
     }
 
     hello()
-    console.log(local) // Uncaught ReferenceError: local is no t defined
+    console.log(local) // Uncaught ReferenceError: local is not defined
     ```
 
     ```
