--- a/[03장] 리액트 훅 깊게 살펴보기/민희/민희.md
+++ b/[03장] 리액트 훅 깊게 살펴보기/민희/민희.md
@@ -82,8 +82,8 @@
       })
       const App = () => {
 
-      	const [status1, setStatus1] = useStatus(false);
-      	const [status2, setStatus2] = useStatus(false);
+      	const [status1, setStatus1] = useState(false);
+      	const [status2, setStatus2] = useState(false);
 
       	const toggle1 = useCallback(() => {
       		setStatus1(!status1);
