docs: useState와 useEffect 정리

--- a/[03장] 리액트 훅 깊게 살펴보기/진경/3.1 리액트의 모든 훅 파헤치기.md
+++ b/[03장] 리액트 훅 깊게 살펴보기/진경/3.1 리액트의 모든 훅 파헤치기.md
@@ -93,7 +93,8 @@ const [state, useState] = useState(initialState)
     - 클로저
       - 이미 실행이 끝난 함수가(실행 컨텍스트가 사라진) 아직 살아있는 함수의 스크프 체인에 의해 변수 객체가 유지되어 접근이 가능한 상황이라고 한다면, 여기는 아직 살아있는 함수(콜 스택에 실행 컨텍스트가 아직 올라가있는 함수)를 클로저 라고 부른다.
     - 여기서 클로저는 어떤 함수(useState) 내부에 선언된 함수(setState)가 실행이 종료된 이후에도(useState가 호출도니 이후에도) 지역변수인 state를 계속 참조할 수 있다는 것을 의미한다.
-    - 아래의 구현 예시를 193p의 구현 예시를 보면 MyReact라고 불리는 클로저 내부에 useState와 관련된 정보(global, index)를 저장해 두고, 이를 필요할 때마다 꺼내놓는 형식으로 구성돼 있다.
+    - 193p의 구현 예시를 보면 MyReact라고 불리는 클로저 내부에 useState와 관련된 정보(global, index)를 저장해 두고, 이를 필요할 때마다 꺼내놓는 형식으로 구성돼 있다.
+    - 실제로는 `useReducer`를 사용한 구조라고 한다.
 
 #### 게으른 초기화
 
@@ -110,6 +111,141 @@ const [count, setCount] = useState(() => {
   - `localStorage`나 `sessionStorage`에 대한 접근, map, filter, find 같은 배열에 대한 접근, 혹은 초깃값 계산을 위해 함수 호출이 필요할 때 와 같이 무서운 연산을 포함해 실행 비용이 많이 드는 경우
 
 ### 3.1.2 useEffect
+
+일단 알려진 것 처럼 `useEffect`는 생명주기 메서드를 대체하기 위해 만들어진 훅이 아니다. `useEffect`는 `state`와 `props`의 변화 속에서 일어나는 렌더링 과정에서 실행되는 부수 효과(effect)을 만들어 내는 함수이다.
+
+#### useEffect란?
+
+의존성 배열이 변경될 때마다 useEffect의 첫 번째 인수인 콜백을 실행한다.
+
+```
+funciton Component() {
+  // ...
+  useeffect(() => {
+    // do something
+  }, [props, state])
+
+  // ...
+}
+```
+
+- 예시
+
+  ```
+  const [count, setCounter] = useState(0)
+
+  function handleButtonClick() {
+    setCounter((prev) => prev + 1)
+  }
+
+  useEffect(() => {
+    console.log('effect 확인!')
+
+    function addMouseEvent() {
+      console.log('event 감지 effect 실행', count)
+    }
+
+    window.addEventListener('click', addMouseEvent)
+
+    return () => {
+      console.log('클린업 함수 실행', count)
+
+      window.removeEventListener('click', addMouseEvent)
+    }
+  }, [count])
+
+  return (
+    <div style={{ height: '500px' }}>
+      <h1>{count}</h1>
+      <button onClick={handleButtonClick}>button</button>
+    </div>
+  )
+  ```
+
+  - 위 예시의 콘솔 결과를 보면 아래와 같다.
+    - [초기 렌더링] => `effect 확인!` => [버튼이 아닌 그냥 클릭시]=> `아무일도 없다.` => [버튼 click] => [리렌더링] => `클린업 함수 실행 0` => `effect 확인!` => `event 감지 effect 실행 1` => [버튼이 아닌 그냥 클릭 시] => `event 감지 effect 실행 1` (eventListener가 window 객체에서 지워지지 않았기 때문에) => [버튼 click] => [리렌더링] => `클린업 함수 실행 1` => `effect 확인!` => `event 감지 effect 실행 2`
+
+- 클린업 함수
+
+  - useEffect 내에서 반환되는 함수
+  - 다음 렌더링이 끝난 뒤에 실행된다.
+  - 이벤트를 등록하고 지울 때 주로 사용하여 이벤트 헨들러가 무한히 추가되는 것을 방지할 수 있다.
+  - 클린업 함수는 새로운 값을 기반으로 렌더링 뒤에 실행되지만 이 변경된 값을 읽는 것이 아니라 함수가 정의됐을 당시에 선언됐던 이전 값을 보고 실행된다.
+
+  - 이벤트 등록후 클린업 함수가 없다면?
+
+    ```
+    const [count, setCounter] = useState(0)
+
+    function handleButtonClick() {
+      setCounter((prev) => prev + 1)
+    }
+
+    useEffect(() => {
+      console.log('effect 확인!', count)
+
+      function addMouseEvent() {
+        console.log('event 감지 effect 실행', count)
+      }
+
+      window.addEventListener('click', addMouseEvent)
+
+    }, [count])
+
+    return (
+      <div style={{ height: '500px' }}>
+        <h1>{count}</h1>
+        <button onClick={handleButtonClick}>button</button>
+      </div>
+    )
+    ```
+
+    - [초기 렌더링] => `effect 확인! 0` => [버튼 click] => [리렌더링] => `effect 확인! 1` => `effect 감지 effect 실행 0` => `effect 감지 effect 실행 1` => [버튼 click] => [리렌더링] => `effect 확인! 2` => `effect 감지 effect 실행 0` => `effect 감지 effect 실행 1` => `effect 감지 effect 실행 2`
+
+#### 의존성 배열
+
+- 빈 배열
+  - 최초 렌더링 직후에 실행된 다음부터는 더 이상 실행되지 않는다.
+- 아무 값도 넘기지 않는 경우
+  - 렌더링이 발생할 때마다 실행된다.
+  - 보통 컴포넌트가 렌더링됐는지 확인하기 위한 방법으로 사용된다.
+- 사용자가 직접 원하는 값을 넣는 경우
+
+#### useEffect를 사용할 떄 주의할 점
+
+> 예상치 못한 버그나 심할 경우 무한 무프에 빠지기도 하기 때문에 주의해서 사용해야 한다.
+
+1. `// eslint-disable-line react-hooks/exhausted-deps` 주석은 최대한 자제하자.
+
+- 이 코드를 사용하는 경우는 대부분 빈 배열을 의존성 배열로 할 때인데 사실 빈 배열 사용을 지양하는 것이 맞다.
+  - useEffect는 반드시 의존설 배열로 전달한 값이 변경에 의해 실행돼야 하는 훅이다.
+  - 그러나 []를 사용한다는 것은 `useEffect`에서 사용한 콜백 함수의 실행과 내부에서 사용한 값의 실제 변경 사이에 연결 고리가 끊어져 있는 것을 의미한다. 이렇게 되면 `props` 나 `state`가 변경 되었음에도 콜백 함수의 값에는 반영이 안되는 상황이 발생할 수 있다.
+
+2. `useEffect`의 첫 번째 인수에 함수명을 부여하여 `useEffect`의 목적을 파악하기 쉽게 하자.
+
+```
+useEffect(
+  function logActiveUser(){
+    logging(user.id)
+  }, [user.id],
+)
+```
+
+3. 거대한 useEffect를 만들지 마라
+   `useEffect`가 컴포넌트의 렌더링 이후에 실행되기 때문에 렌더링 작업에 영향을 적게 미칠 수 있지만 여전히 자바스크립트 실행 성능에 영향을 미친가는 것을 변함 없다.
+
+   - `useEffect`는 가능한 간결하고 가볍게 유지하는 것이 좋다.
+   - 만약 의존성 배열에 불가피하게 여러 변수가 들어가야 하는 상황이라면 최대한 `useCallback`과 `useMemo` 등으로 사전에 정제한 내용들만 `useEffect`에 담아두는 것이 좋다.
+
+4. 불필요한 외부 함수를 만들지 말자.
+
+- 이렇게 하면 불필요한 의존성 배열도 줄일 수 있고 무한루프에 빠지지 않기 위해 넣었던 `useCallback` 같은 메모이제이션 훅도 생략할 수 있다
+  .
+
+5. `useEffect`의 콜백인수로 비동기 함수를 바로 넣는 것은 경쟁 상태를 야기하기 때문에 이렇게 사용하면 안 된다.
+
+- 하지만 비동기 함수 실행 자체는 문제가 안된다. useEffect 내부에서 비동기 함수를 선언해 실행하거나 즉시 실행 비동기 함수를 만들어서 사용한는 것은 가능하다.
+- ⭐️ 다만 이럴 경우에는 abortController 처리를 클린업 함수 부분에 해줘서 fetch의 경우 이전 요청을 취소해야 한다.
 
 ### 3.1.3 useMemo
 
