--- a/[03장] 리액트 훅 깊게 살펴보기/진경/3.1 리액트의 모든 훅 파헤치기.md
+++ b/[03장] 리액트 훅 깊게 살펴보기/진경/3.1 리액트의 모든 훅 파헤치기.md
@@ -249,18 +249,94 @@ useEffect(
 
 ### 3.1.3 useMemo
 
+- 값을 기억한다.
+- 비용이 큰 연산에 대한 결과를 저장(메모이제이션)해 두고, 저장된 값을 반환하는 훅이다.
+- 첫 번쨰 인수로 어떠한 값을 반환하는 생성함수를, 두 번째 인수로는 해당 함수가 의존하는 값의 배열을 전달한다.
+- 값과 컴포넌트를 기억할 수 있다.
+
+```
+import {useMemo} from 'react'
+
+const memoizedValue = useMemo(() => expensiveComputation(a, b), [a, b])
+```
+
+- 렌더링 발생 시 의존성 배열의 값이 변경되지 않았으면 함수를 재실행 하지 않고 이전에 기억해 둔 해당 값을 반환하고, 의존성 배열의 값이 변경됐다면 첫 번째 인수의 함수를 실행한 후에 그 값을 반환하고 그 값을 다시 기억해 둘 것이다.
+- React.memo를 쓰는 것이 더 현명하다.
+
 ### 3.1.4 useCallback
+
+- 인수로 넘겨 받은 콜백 자체를 기억한다.
+- 즉 특정 함수를 새로 만들지 않고 다시 재사용한다.
+- JS에서 함수 또한 값으로 표현될 수 있으므로 useMemo로 useCallback을 구현할 수 있다.
+
+  ```
+  export function useCallback(callback, args) {
+    currentHook = 8
+
+    return useMemo(() => callback, args)
+  }
+  ```
 
 ### 3.1.5 useRef
 
+`useRef`는 `useState`와 동일하게 컴포넌트 내부에서 렌더링이 일어나도 변경 가능한 상태값을 저장한다는 공통점이 있다. `useState`와 다른 점은
+
+1. `useRef`는 반환값인 객체 내부에 있는 current로 값에 접근 또는 변경할 수 있다.(`ref.current`)
+2. `useRef`는 그 값이 변화하더라도 렌더링을 발생시키지 않는다.
+
+- 주로 **DOM에 접근하고 싶을 때** 혹은 개발자가 원하는 시점의 값을 렌더링에 영향을 미치지 않고 보관해 두고 싶을때(218p)
+
 ### 3.1.6 useContext
+
+`useContext`를 사용하면, 명시적인 props 전달 없이도 선언한 하위 컴포넌트 모두에서 자유롭게 원하는 값을 사용할 수 있다.
+
+- `<Context.Provider />` 에서 제공한 값을 하위의 컴포넌트들이 `useContext(Context)`를 사용하여 꺼내 쓸 수 있다. 만약 여러 개의 Provider가 있다면 가장 가까운 Provider의 값을 가져오게 된다.
+
+- useContext는 상태 관리를 위한 리액트의 API가 아닌, 상태를 주입해 주는 API이다. 또한 이 자체로 렌더링 최적화에 아무런 도움이 되지 않는다.
+
+- 상태 관리 라이브러리가 되기 위해서는 다음 두 조건을 만족해야한다.
+
+1. 어떠한 상태를 기반으로 다른 상태를 만들어 낼 수 있어야 한다.
+2. 필요에 따라 이러한 상태 변화를 최적화 할 수 있어야 한다.
 
 ### 3.1.7 useReducer
 
+- useReducer의 심화 버전이다.
+- state 값을 변경하는 시나리오를 제한적으로 두고 이에 대한 변경을 빠르게 확인 할 수 있게끔 하는 것이 useReducer의 목적이다.
+- 사용되는 용어 정리
+  - 반환값은 `useState`와 동일하게 길이가 2인 배열이다.
+    - (첫 번째 요소)state : 현재 useReducer가 가지고 있는 값
+    - (두 번째 요소)dispatcher : state를 업데이트하는 함수로 action을 넘겨 준다.
+      - action : state를 변경할 수 있다.
+  - 3개의 인수를 필요로 한다
+    - (첫 번째 인수)reducer: action을 정의하는 함수이다.
+    - (두 번째 인수)initialState: useReducer의 초깃값이다.
+    - (세 번째 인수)init: 필수x, 게은른 초기화처럼 사용된다. 초깃값을 지연해서 생성시키고 싶을 때 사용하는 함수다.
+
 ### 3.1.8 useInperativeHandle
+
+- forwardRef()
+  ref를 전달하는데 있어서 일관성을 제공하기 위해 사용한다. 좀 더 확실하게 ref를 전달할 것임을 예측할 수 있고, 사용하는 쪽에서도 더 안정적으로 받아서 사용할 수 있다. 전달 받는 컴포넌트에서도 `ref`라는 이름을 그대로 사용가능하다.
+- useInperativeHandle()는 넘겨받은 ref를 원하는 대로 수정할 수 있는 훅이다.
+- useInperativeHandle()을 사용하면 이 ref의 원하는 값이나 액션을 정의할 수 있다.
 
 ### 3.1.9 useLayoutEffect
 
+> useEffect와 동일하나, 모든 DOM의 변경 후에 동기적으로 발생한다.
+
+- DOM은 계산 됐지만 이것이 화면에 반영되기 전에 하고 싶은 작업이 있을때의 상황에만 사용하는 것이 좋다.
+
+1. 리액트가 DOM을 업데이트
+2. useLayoutEffect를 실행
+3. 브라우저에 변경 사항을 반영
+4. useEffect를 실행
+
 ### 3.1.10 useDebugValue
 
+리액트 어플리케이션을 개발하는 과정에서 사용된다. 디버깅하고 싶은 정보를 이 훅에 넣고 사용하면 리액트 개발자 도구에서 볼 수 있다. 다른 훅 내부에서만 실행할 수 있다.
+
 ### 3.1.11 훅의 규칙
+
+- rules-of-hooks
+  1. 최상위에서만 훅을 호출해야 한다. 반복문이나 조건문, 중첩된 함수 내에서 훅을 실행할 수 없다. 이 규칙을 따라야만 컴포넌트가 렌더링될 때마다 항상 동일한 순서로 훅이 호출되는 것을 보장할 수 있다.
+  2. 훅을 호출할 수 있는 것은 리엑트 함수 컴포넌트, 혹은 사용자 정의 축의 두가지 경우 뿐이다. 일반 JS함수에서는 훅을 사용할 수 없다.
