--- a/[03장] 리액트 훅 깊게 살펴보기/진경/3.1 리액트의 모든 훅 파헤치기.md
+++ b/[03장] 리액트 훅 깊게 살펴보기/진경/3.1 리액트의 모든 훅 파헤치기.md
@@ -163,7 +163,7 @@ funciton Component() {
   ```
 
   - 위 예시의 콘솔 결과를 보면 아래와 같다.
-    - [초기 렌더링] => `effect 확인!` => [버튼이 아닌 그냥 클릭시]=> `아무일도 없다.` => [버튼 click] => [리렌더링] => `클린업 함수 실행 0` => `effect 확인!` => `event 감지 effect 실행 1` => [버튼이 아닌 그냥 클릭 시] => `event 감지 effect 실행 1` (eventListener가 window 객체에서 지워지지 않았기 때문에) => [버튼 click] => [리렌더링] => `클린업 함수 실행 1` => `effect 확인!` => `event 감지 effect 실행 2`
+    - [초기 렌더링] => `effect 확인!` => [버튼이 아닌 그냥 클릭시]=> 'event 감지 effect 실행 0' => [버튼 click] => [리렌더링] => `클린업 함수 실행 0` => `effect 확인!` => `event 감지 effect 실행 1` => [버튼이 아닌 그냥 클릭 시] => `event 감지 effect 실행 1` (eventListener가 window 객체에서 지워지지 않았기 때문에) => [버튼 click] => [리렌더링] => `클린업 함수 실행 1` => `effect 확인!` => `event 감지 effect 실행 2
 
 - 클린업 함수
 
