--- a/[05장] 리액트와 상태 관리 라이브러리/민희/민희.md
+++ b/[05장] 리액트와 상태 관리 라이브러리/민희/민희.md
@@ -168,3 +168,44 @@
       - 정식 버전은 릴리즈되지 않았으나, 리액트18의 최신 기능들도 확실히 지원하고 있고, 서버 컴포넌트와 같은 추가적인 API나 기능도 잘 대응해 줄 것으로 기대.
       - 비동기 작업을 지원하는 API (ex. `selector`)들도 제공하기 때문에 추가적인 미들웨어 사용하지 않아도 됨.
       - 자체적인 dev tools 지원
+  - **Jotai** - Recoil에서 영감을 받아 만들어졌음 - 상향식 접근법 + Context의 리렌더링 문제 해결하고자 설계 - `atom` - Recoil과 다르게 `atom`하나로 파생된 상태까지도 만들 수도 있다. - 함수를 인수로 받을 수 있기 때문 - key넘기지 않아도 된다. - config(init, read, write)를 반환, atom에 따로 상태를 저장하지 않음. - [`useAtomValue`](https://github.com/pmndrs/jotai/blob/476a3f24cb417257d47c319c155b76198a4f9593/src/core/useAtomValue.ts#L8-L86) - 상태를 atom이 아닌 이 곳에 저장! - atom 값은 store에 저장. atom 객체 자체가 키로 활용된다. (WeakMap 사용하기 때문에 별도의 key를 사용하지 않아도 됨.) - `renderInChanged`를 통해 넘겨받은 atom이 스토어의 atom과 값이 달라지면 렌더링을 일으킨다. - `useAtom` - useState와 동일한 형태로, 값을 나타내는 `useAtomValue`, atom을 수정할 수 있는 `useSetAtom` 훅 반환 - setAtom으로 atom을 스토어에서 찾아 값을 업데이트 하면, listener함수를 실행시켜 사용하는 쪽에서 리렌더링을 수행한다. - 특징 - Recoil에 비해 API가 간결하다. - WeakMap을 활용해 atom 객체 자체에 대한 참조가 키처럼 활용된다. 별도의 키를 따로 관리하지 않아도 된다. - 파생된 값을 만들기 위해 `selector`를 사용하지 않아도, atom만으로 파생된 상태를 만들 수 있다. - 리액트18을 원활히 지원하며 정식 출시되어 안정적으로 운영 중이다. 따라서 개발자들이 Recoil의 atom 형태를 사용하고 싶을 때 대안으로 많이 사용한다.
+    - **Zustand**
+      - 리덕스에 영감을 받아 만들어졌다.
+      - atom이 아닌 '하나의 스토어'를 중앙 집중형으로 활용해 이 스토어 내부에서 상태를 관리
+      - [Zustand의 스토어 (`createStore`)](https://github.com/pmndrs/zustand/blob/eea3944499883eae1cf168770ed85c05afc2aae9/src/vanilla.ts#L62-L101)
+        - 바닐라 상태관리 예제처럼, useState 외부에서 별도의 `let state`변수에 스토어의 상태값을 담아둔다.
+        - 어떤 프레임워크와도 독립적. 리액트만이 아닌 Vanilla JS 환경에서도 사용 가능
+        - `set`인수를 활용해 생성 가능, 두 번째 인수로 `get`을 추가해 현재 스토어의 값을 받아올 수도 있음.
+          ```js
+          const myStore = createStore((set) => ({
+            count: 0,
+            increase: (num) => set((state) => ({ count: state.count + num })),
+          }));
+          ```
+          `createStore`에서 state를 생성할 때 setState, getState, api를 인수로 넘겨줬기 때문.
+        - `subscribe`를 통해 스토어의 값이 변경될 때마다 특정 함수를 실행할 수 있음. 특정 값이 변경될 때만 실행하도록 최적화 가능
+      - 리액트에서 사용할 수 있도록 도와주는 함수는 `./src/react.ts`에서 별도로 관리
+        - `useStore` 훅
+          - 리액트의 `useSyncExternalStoreWithSelector`활용 (리액트 외부에서 관리되는 상태값을 리액트에서 사용할 수 있도록 도와준다, useSyncExternalStore와 동일)
+        - `create`
+          - 리액트에서 사용할 수 있는 스토어를 만들어준다.
+            ```js
+            const useCounterStore = create((set) => ({
+            	count: 1, // getter
+            	inc: () => ~~~, // setter
+            	dec: () => ~~~,
+            }))
+            function CounterComponent() {
+            	const { count, inc, dec } = useCounterStore();
+            	return (~~~)
+            }
+            ```
+      - 특징
+        - 가볍다. (2.9kB, Recoil은 79.1kB)
+        - API가 간결하게 작성돼있다, 쉽게 접근 가능
+        - 리덕스처럼 미들웨어 지원 (ex. `persist`, `immer`, ...)
+          - sessionStorage에 추가로 저장하는 등의 추가적인 작업 정의 가능!
+  - 결국 상태 관리 라이브러리 모두 리렌더링을 만드는 방법은 거의 동일하다.
+  - 각 특징을 파악해 애플리케이션에 필요한 라이브러리는 무엇일지 고민해보자.
+    - 메인테이너와 다운로드 수가 많고 이슈가 잘 관리되고 있는 라이브러리가 좋다.
+    - 리액트 18과 더불어 앞으로의 변화에도 잘 대응할 라이브러리인가?
