Update 상태관리와 상태 관리 라이브러리 .md

--- a/[05장] 리액트와 상태 관리 라이브러리/진경/상태관리와 상태 관리 라이브러리 .md
+++ b/[05장] 리액트와 상태 관리 라이브러리/진경/상태관리와 상태 관리 라이브러리 .md
@@ -1,5 +1,3 @@
-### 상태 관리는 왜 필요한가?
-
 #### 상태란?
 
 - 어떠한 의미를 지닌 값이며 애플리케이션의 시나리오에 따라 지속적으로 변경 될 수 있는 값이다.
@@ -71,6 +69,7 @@
   - atom을 사용하여 상태를 저장하고, useRecoilState를 사용하여 상태를 읽고 업데이트한다.
 
 - selector을 필두로 다양한 비동기 작업을 지원하는 API를 제공하고 있기 때문에 리덕스와 달리 redux-saga나 redux-thunk 등 추가적인 미들웨어를 사용하지 않더라도 비동기 작업을 수월하게 처리할 수 있다. 하지만 정식 버전이 아직 출시 되지 않고 있다는 걸림돌이 있다.
+  [selector](https://itchallenger.tistory.com/539#google_vignette)
 
 #### Jotai
 
