docs: 리액트 17, 18 변경 사항 정리

--- a/[05장] 리액트와 상태 관리 라이브러리/진경/상태관리와 상태 관리 라이브러리 .md
+++ b/[05장] 리액트와 상태 관리 라이브러리/진경/상태관리와 상태 관리 라이브러리 .md
@@ -83,7 +83,7 @@
 
 - `예시 코드` 2개
   - atom 개념을 도입하면서 API가 간결하다.
-  - recoild의 atom에서는 각 상태값이 모두 별도의 키를 필요했는데, jotai는 이 부분을 추상화해 사용자가 키를 관리할 필요없다. => 객체의 참조를 통해 값을 관리한다.
+  - recoil의 atom에서는 각 상태값이 모두 별도의 키를 필요했는데, jotai는 이 부분을 추상화해 사용자가 키를 관리할 필요없다. => 객체의 참조를 통해 값을 관리한다.
   - recoil에서 처럼 selector 없이도 atom 값에서 또 다른 파생된 상태를 만들수 있다.
 
 #### Zustand
@@ -98,4 +98,4 @@
 #### 상태 관리 라이브러리 선택법
 
 - 라이브러리별로 특징을 잘 파악해서 상황에 맞는 라이브러리를 선택하자
-- 메인테이너가 많고 다운로드가 활발하며 이슈가 관리가 잘되고 있는 라이브러리를 선택한는 것이 좋다.
+- 메인테이너가 많고 다운로드가 활발하며 이슈가 관리가 잘되고 있는 라이브러리를 선택하는 것이 좋다.
